test_programs/compile_failure/comptime_cannot_mutate_other_crate/dependency/src/lib.nr
pub struct Foo {}

pub fn foo() {}
